--- a/ClusteringBangaloreLocalities.ipynb
+++ b/ClusteringBangaloreLocalities.ipynb
@@ -704,9 +704,9 @@
    ],
    "source": [
     "# defining Foursquare Credentials and Version including ID, Secret & API\n",
-    "CLIENT_ID = 'SI2W5BH5AS2KJW0BOPO2BVUBKOVLIQ4PXSO04KLAPPQZXTXJ' # Foursquare ID\n",
-    "CLIENT_SECRET = 'U4YHJ414RDIDBSYHJHCQREABBLGANU3WAF22DARVEKARBMVM' # Foursquare Secret\n",
-    "ACCESS_TOKEN = '2LOTMDUV2C5Y3XZMBMEGAYNAWN5F50WKB1EEA0WTWCZHOU30' # FourSquare Access Token\n",
+    "CLIENT_ID = 'xxx' # Foursquare ID\n",
+    "CLIENT_SECRET = 'xxx' # Foursquare Secret\n",
+    "ACCESS_TOKEN = 'xxx' # FourSquare Access Token\n",
     "VERSION = '20200604'\n",
     "\n",
     "print('Your credentails:')\n",
