--- a/ClusteringBangaloreLocalities.ipynb
+++ b/ClusteringBangaloreLocalities.ipynb
@@ -697,8 +697,8 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: SI2W5BH5AS2KJW0BOPO2BVUBKOVLIQ4PXSO04KLAPPQZXTXJ\n",
-      "CLIENT_SECRET:U4YHJ414RDIDBSYHJHCQREABBLGANU3WAF22DARVEKARBMVM\n"
+      "CLIENT_ID: xxx\n",
+      "CLIENT_SECRET:xxx\n"
      ]
     }
    ],
